--- a/package.json
+++ b/package.json
@@ -1,10 +1,29 @@
 {
   "devDependencies": {
     "@types/jest": "^29.5.13",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.11.0",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.5"
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
+    "typescript-eslint": "^8.8.1"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint-fix": "eslint --fix .",
+    "prepare": "husky"
+  },
+  "dependencies": {
+    "@eslint/js": "^9.12.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
